
PP/09 Bugzilla 1214 - Log authentication information in reject log.
      Patch by Jeremy Harris.

PP/10 Added dbmjz lookup type.

PP/11 Let heimdal_gssapi authenticator take a SASL message without an authzid.

PP/12 MAIL args handles TAB as well as SP, for better interop with
      non-compliant senders.
      Analysis and variant patch by Todd Lyons.


Exim version 4.77
-----------------

PP/01 Solaris build fix for Oracle's LDAP libraries.
      Bugzilla 1109, patch from Stephen Usher.

TF/01 HP/UX build fix: avoid arithmetic on a void pointer.

TK/01 DKIM Verification: Fix relaxed canon for empty headers w/o
      whitespace trailer

TF/02 Fix a couple more cases where we did not log the error message
      when unlink() failed. See also change 4.74-TF/03.

TF/03 Make the exiwhat support code safe for signals. Previously Exim might
      lock up or crash if it happened to be inside a call to libc when it
      got a SIGUSR1 from exiwhat.

      The SIGUSR1 handler appends the current process status to the process
      log which is later printed by exiwhat. It used to use the general
      purpose logging code to do this, but several functions it calls are
      not safe for signals.

      The new output code in the SIGUSR1 handler is specific to the process
      log, and simple enough that it's easy to inspect for signal safety.
      Removing some special cases also simplifies the general logging code.
      Removing the spurious timestamps from the process log simplifies
      exiwhat.

TF/04 Improved ratelimit ACL condition.

      The /noupdate option has been deprecated in favour of /readonly which
      has clearer semantics. The /leaky, /strict, and /readonly update modes
      are mutually exclusive. The update mode is no longer included in the
      database key; it just determines when the database is updated. (This
      means that when you upgrde Exim will forget old rate measurements.)
